Fixing layout bugs all over. Spending too much time on janky janky nextjs images

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,7 +8,6 @@
   :root {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
@@ -35,6 +36,10 @@
   }
 }
 
+.top-level-div {
+  @apply backdrop-blur-sm;
+}
+
 @keyframes fade-in-down {
   0% {
     opacity: 0;
@@ -48,4 +53,26 @@
 
 .animate-fade-in-down {
   animation: fade-in-down 0.5s ease-out;
+}
+
+/* Klasser relatert til meny hpndtering i customComponents*/
+.glow-on-hover {
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.glow-on-hover:hover {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.6),
+    0 0 20px rgba(255, 255, 255, 0.4), 0 0 30px rgba(255, 255, 255, 0.2);
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(1);
+  }
+  50% {
+    transform: translateY();
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
